--- a/网页钢琴/index.html
+++ b/网页钢琴/index.html
@@ -37,28 +37,28 @@
           进入</button></div>
 
     </div>
-    <div class="main" id="main" style="display: none;margin: auto;
+    <div class="main" id="main" style="display: none;margin: auto;position: absolute;
     margin-top: 50%;
     margin-bottom: 50%;">
       <div id="bac"></div>
       <div id="yinyan">
-        <h2 id="chunfeng">春风不及 樱花未至<br><br>&nbsp;&nbsp;&nbsp;&nbsp;你未出现 美好不始</h2>
+        <h2 id="chunfeng">春风十里&nbsp;却不如你<br><br>&nbsp;&nbsp;&nbsp;&nbsp;伊人独立&nbsp;心动不已</h2>
         <div id="play" class="btn1 fas fa-play">
           <div id="bji" class="bj"></div>
           <div class="fr" id="fronclick" onclick="funclick()"></div>
         </div>
       </div>
-      <div id="boxup" style="display: flex;margin: auto;margin-left: 20%;margin-right: 20%;">亲爱的<li id="inname"
+      <div id="boxup" style="display: flex;margin: auto;margin-top: 20%;margin-left: 20%;margin-right: 20%;">亲爱的<li id="inname"
           style="list-style-type:none;left: 0;"></li>：
       </div>
       <div id="box">
         <div id="boxl">5<br>2<br>0</div>
         <div id="boxr"><br>
-          <h3>一直都很想说</h3><br>认识你是我最大的幸运。<br><br>我的世界已开满花，每天都想为你尝试一些我未见过的事.....你愿意陪我吗。<br><br>所以.....试着按动第一个a键吧。
+          <h3>一直都很想说</h3><br>认识你是我最大的幸运。<br><br>你的出现，宛若一颗流星，让我雀跃不已，<br><br>所以.....试着按动第一个a键吧。
         </div>
       </div>
       <div id="box1""></div>
-      <a href=" javascript:void(0)" onclick="change()">aini</a>
+      <div class="Change"><a href=" javascript:void(0)" onclick="change()" class="change">next</a></div>
       </div>
     </div>
     <script src="index.js"></script>
