Update and rename 网页钢琴/index.html to 网页钢琴 /index.html

--- a/网页钢琴 /index.html
+++ b/网页钢琴 /index.html
@@ -58,7 +58,7 @@
         </div>
       </div>
       <div id="box1" ></div>
-      <div class="Change"><a href=" javascript:void(0)" onclick="change()"  class="change" >next</a></div>
+       <div class="Change"></div><a href=" javascript:void(0)" onclick="change()"  class="change" >next</a>
       </div>
     </div>
     <script src="index.js"></script>
